# a2l-editor

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package-lock.json  package.json
.ai-testing/: mock-data.js  mock-tauri.js  test-cases.json  test-plan.json
.ai-testing/mock-modules/: clipboard.js  core.js  dialog.js  event.js  window.js
.cargo/: config.toml
.github/workflows/: build-linux-manual.yml  build-windows-manual.yml  build.yml
.tauri-driver-test/lib/: README.md  test-cases.json  test-patterns.md  test-plan.json
docs/: DESIGN.md  HANDOVER_TAURI.md  PLAN.md  TASKS.md
src/: main_tauri.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
src-ui/: package.json  tailwind.config.js  vite.config.ts  vite.test.config.ts
src-ui/src/: app.css  app.d.ts  app.html
src-ui/src/lib/: autoLoad.ts  commands.ts  stores.ts  themes.ts  types.ts
src-ui/src/lib/components/: A2lEditor.svelte  A2lPanel.svelte  AboutDialog.svelte  AddVariableDialog.svelte  CloseConfirmDialog.svelte  ContextMenuA2l.svelte  ContextMenuElf.svelte  ExportDialog.svelte  FileInfo.svelte  GenerateDialog.svelte  Header.svelte  HelpDialog.svelte  LoadingOverlay.svelte  StatusBar.svelte  VariableDetail.svelte  VariableList.svelte  VirtualList.svelte
src-ui/src/lib/utils/: debounce.ts
src-ui/src/routes/: +page.svelte
src-ui/static/: test.html
src/lib/: a2l.rs  cache.rs  data_package.rs  dwarf.rs  elf.rs  hash.rs  mod.rs  types.rs
