[workspace]
resolver = "2"
members = ["src-tauri"]

[package]
name = "a2l-editor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "a2l-cli"
path = "src/bin/a2l_cli.rs"

[lib]
name = "a2l_editor"
path = "src/lib/mod.rs"

[dependencies]
# ELF/DWARF
object = "0.38"
gimli = "0.31"
memmap2 = "0.9"

# 缓存
rusqlite = { version = "0.31", features = ["bundled"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# 工具
anyhow = "1.0"
sha2 = "0.10"
chrono = "0.4"
dirs = "5.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
