[package]
name = "a2l-editor-tauri"
version = "0.1.0"
edition = "2021"
description = "A2L Editor Tauri Backend"
authors = ["A2L Editor Team"]
license = "MIT"

[[bin]]
name = "a2l-editor-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }

# 复用现有核心库
a2l-editor = { path = ".." }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
